# libschnorr256k1-kmp

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
bench/: CMakeLists.txt  bench_vs_acinq.c
gradle/: libs.versions.toml
jni/: CMakeLists.txt  jni_bridge.c
jni/jvm/darwin-aarch64/: build.gradle.kts
jni/jvm/darwin-x86_64/: build.gradle.kts
jni/jvm/linux-aarch64/: build.gradle.kts
jni/jvm/linux-x86_64/: build.gradle.kts
patches/: README.md  libschnorr256k1-applclang-cpuid.bundle  libschnorr256k1-applclang-cpuid.patch  libschnorr256k1-shani-dispatch.bundle  libschnorr256k1-shani-dispatch.patch
schnorr256k1/: build.gradle.kts
schnorr256k1/src/androidMain/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1.android.kt
schnorr256k1/src/commonMain/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1.kt
schnorr256k1/src/commonTest/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1Test.kt
schnorr256k1/src/jsMain/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1.js.kt
schnorr256k1/src/jsMain/resources/: schnorr256k1_bridge.mjs
schnorr256k1/src/jsTest/kotlin/: TestSetup.kt
schnorr256k1/src/jsTest/resources/: schnorr256k1_wasm.js  schnorr256k1_wasm.wasm  test_setup.js
schnorr256k1/src/jvmMain/kotlin/com/vitorpamplona/schnorr256k1/: NativeLoader.kt  Schnorr256k1.jvm.kt
schnorr256k1/src/nativeInterop/cinterop/: schnorr256k1.def
schnorr256k1/src/nativeMain/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1.native.kt
schnorr256k1/src/wasmJsMain/kotlin/com/vitorpamplona/schnorr256k1/: Schnorr256k1.wasmJs.kt
scripts/: build_native.sh  build_wasm.sh
